# lingmo-wallpapers

./: README.md
.github/workflows/: release.yml
debian/: changelog
sources/: CMakeLists.txt
